--- a/aboutus.html
+++ b/aboutus.html
@@ -129,7 +129,7 @@ http://www.templatemo.com/tm-509-hydro
                   <div class="col-md-8 col-sm-8">
                       
                        <!-- CONTACT FORM HERE -->
-                       <form id="contact-form" role="form" action="#" method="post">
+                       <form action="mailto: tasiahills@gmail.com" method="post" enctype="text/plain" class="contact-form me-lg-5 pe-lg-3" role="form">
                             <div class="col-md-6 col-sm-6">
                                  <input type="text" class="form-control" placeholder="Name" id="cf-name" name="cf-name" required="">
                             </div>
@@ -191,7 +191,7 @@ http://www.templatemo.com/tm-509-hydro
                                  <ul class="social-icon">
                                       <li><a href="https://www.facebook.com/templatemo" class="fa fa-facebook-square" attr="facebook icon"></a></li>
                                      
-                                      <li><a href="#" class="fa fa-instagram"></a></li>
+                                      <li><a href="https://www.instagram.com/tasiahillsoes?igsh=b3UyeWcxY3FndWZ5" class="fa fa-instagram"></a></li>
                                  </ul>
                             </div>
                        </div>
