--- a/ourdogs.html
+++ b/ourdogs.html
@@ -146,7 +146,7 @@ http://www.templatemo.com/tm-509-hydro
                   <div class="col-md-8 col-sm-8">
                       
                        <!-- CONTACT FORM HERE -->
-                       <form id="contact-form" role="form" action="#" method="post">
+                       <form action="mailto: tasiahills@gmail.com" method="post" enctype="text/plain" class="contact-form me-lg-5 pe-lg-3" role="form">
                             <div class="col-md-6 col-sm-6">
                                  <input type="text" class="form-control" placeholder="Name" id="cf-name" name="cf-name" required="">
                             </div>
@@ -208,7 +208,7 @@ http://www.templatemo.com/tm-509-hydro
                                  <ul class="social-icon">
                                       <li><a href="https://www.facebook.com/templatemo" class="fa fa-facebook-square" attr="facebook icon"></a></li>
                                      
-                                      <li><a href="#" class="fa fa-instagram"></a></li>
+                                      <li><a href="https://www.instagram.com/tasiahillsoes?igsh=b3UyeWcxY3FndWZ5" class="fa fa-instagram"></a></li>
                                  </ul>
                             </div>
                        </div>
@@ -237,31 +237,6 @@ http://www.templatemo.com/tm-509-hydro
                                              <h2>Hydro Co</h2>
                                         </div>
 
-                                        <!-- NAV TABS -->
-                                        <ul class="nav nav-tabs" role="tablist">
-                                             <li class="active"><a href="#sign_up" aria-controls="sign_up" role="tab" data-toggle="tab">Create an account</a></li>
-                                             <li><a href="#sign_in" aria-controls="sign_in" role="tab" data-toggle="tab">Sign In</a></li>
-                                        </ul>
-
-                                        <!-- TAB PANES -->
-                                        <div class="tab-content">
-                                             <div role="tabpanel" class="tab-pane fade in active" id="sign_up">
-                                                  <form action="#" method="post">
-                                                       <input type="text" class="form-control" name="name" placeholder="Name" required>
-                                                       <input type="telephone" class="form-control" name="telephone" placeholder="Telephone" required>
-                                                       <input type="email" class="form-control" name="email" placeholder="Email" required>
-                                                       <input type="password" class="form-control" name="password" placeholder="Password" required>
-                                                       <input type="submit" class="form-control" name="submit" value="Submit Button">
-                                                  </form>
-                                             </div>
-
-                                             <div role="tabpanel" class="tab-pane fade in" id="sign_in">
-                                                  <form action="#" method="post">
-                                                       <input type="email" class="form-control" name="email" placeholder="Email" required>
-                                                       <input type="password" class="form-control" name="password" placeholder="Password" required>
-                                                       <input type="submit" class="form-control" name="submit" value="Submit Button">
-                                                       <a href="https://www.facebook.com/templatemo">Forgot your password?</a>
-                                                  </form>
                                              </div>
                                         </div>
                                    </div>
