--- a/family.html
+++ b/family.html
@@ -22,6 +22,7 @@ http://www.templatemo.com/tm-509-hydro
      <link rel="stylesheet" href="templatemo-style.css">
      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
      <link rel="stylesheet" href="w3.css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
