--- a/family.html
+++ b/family.html
@@ -134,8 +134,8 @@ http://www.templatemo.com/tm-509-hydro
       </div>
       <!-- Slideshow next/previous buttons -->
       <div class="w3-container w3-dark-grey w3-padding w3-xlarge">
-        <div class="w3-left" onclick="plusDivs(-1)"><i class="fa-arrow-circle-left w3-hover-text-teal"></i></div>
-        <div class="w3-right" onclick="plusDivs(1)"><i class="fa-arrow-circle-right w3-hover-text-teal"></i></div>
+        <div class="w3-left" onclick="plusDivs(-1)"><i class="fa fa-arrow-circle-left"></i></div>
+        <div class="w3-right" onclick="plusDivs(1)"><i class="fa fa-arrow-circle-right"></i></div>
       
         <div class="w3-center">
           <span class="w3-tag demodots w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
