--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@ http://www.templatemo.com/tm-509-hydro
 
      <!-- MAIN CSS -->
      <link rel="stylesheet" href="templatemo-style.css">
+       <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+     <link rel="stylesheet" href="w3.css">
 </head>
 <body>
 
