--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ http://www.templatemo.com/tm-509-hydro
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-                         <li><a href="https://www.facebook.com/groups/235613274912647/?ref=share&mibextid=wwXIfr&rdid=qXEChNavhgXhuqDR&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2Fg%2F1BiQx1GUHG%2F%3Fmibextid%3DwwXIfr#"><img src="fb.png"></a></li>
+                          <li><a href="https://www.facebook.com/groups/235613274912647/?ref=share&mibextid=wwXIfr&rdid=qXEChNavhgXhuqDR&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2Fg%2F1BiQx1GUHG%2F%3Fmibextid%3DwwXIfr#"><i class="fa fa-facebook-square"></i></a></li>
                          
                          <li><a href="https://www.instagram.com/tasiahillsoes?igsh=b3UyeWcxY3FndWZ5"><i class="fa fa-instagram"></i></a></li>
                          
