--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@ http://www.templatemo.com/tm-509-hydro
                          <div class="section-title">
                               <h2>CONTACT US</h2>
                               <br>
-                              <h3>JOY: (905) 655-8414 / (416) 399-8110 </h3>
+                              <h3>JOY: (416) 399-8110 </h3>
                               <h3>KADEY: (289) 716-2363 </h3>
                               <h3>EMAIL: joypgriffiths@gmail.com / tasiahills@gmail.com </h3>
                               
@@ -155,7 +155,7 @@ http://www.templatemo.com/tm-509-hydro
                               </div>
                               <div class="col-md-6 col-sm-7">
                                    <div class="phone-contact"> 
-                                        <p>Call Joy <span>(905) 655-8414 / (416) 399-8110</span></p>
+                                        <p>Call Joy <span>(416) 399-8110</span></p>
                                         <p>Call Kadey <span>(289) 716-2363</span></p>
                                         <p>Email <span>joypgriffiths@gmail.com / tasiahills@gmail.com</span></p>
                                    </div>
