--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ http://www.templatemo.com/tm-509-hydro
                               <div class="media-body blog-info">
                                    
                                    <h3>A Trusted Dog Breeder</h3>
-                                   <p>Our dogs aren't just pets—they're family. Nestled just 45 minutes northeast of Toronto, we pride ourselves on being more than just a dog breeder. Being the number one Canadian dog breeder, we are a dedicated community of dog lovers passionate about our beloved Old English Sheepdogs.</p>
+                                   <p>Our dogs aren't just pets—they're family. Nestled just 45 minutes northeast of Toronto, we pride ourselves on being more than just a dog breeder. Being one of the top breeders in Canada, we are a dedicated community of dog lovers passionate about our beloved Old English Sheepdogs.</p>
                                    
                                    <a href="aboutus.html" class="btn section-btn">More About Us</a>
                               </div>
