--- a/aboutus.html
+++ b/aboutus.html
@@ -2,11 +2,8 @@
 <html lang="en">
 <head>
 
-     <title>About Tasia Hills</title>
-<!-- 
-Hydro Template 
-http://www.templatemo.com/tm-509-hydro
--->
+     <title>About Tasia Hills - CKC Accountable Breeder</title>
+
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
      <meta name="description" content="">
@@ -77,7 +74,7 @@ http://www.templatemo.com/tm-509-hydro
  <!-- About Section -->
  <div class="w3-row w3-padding-64" id="about">
      <div class="w3-col m6 w3-padding-large ">
-      <img src="IMG_2591.JPG" class="w3-round w3-image " alt="Dog" width="600" height="750">
+      <img src="IMG_2591.JPG" class="w3-round w3-image " alt="Top Purebred Sheepdog" width="600" height="750">
      </div>
  
      <div class="w3-col m6 w3-padding-large">
