--- a/Tasia-Hills-CKC-Accountable-Breeder.html
+++ b/Tasia-Hills-CKC-Accountable-Breeder.html
@@ -2,16 +2,13 @@
 <html lang="en">
 <head>
 
-     <title>Tasia Hills</title>
-<!-- 
-Hydro Template 
-http://www.templatemo.com/tm-509-hydro
--->
+      <title>Tasia Tasia-Hills-CKC-Accountable-Breeder</title>
+
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-     <meta name="description" content="">
-     <meta name="keywords" content="">
-     <meta name="author" content="">
+    <meta name="description" content="Breeder of Top Quality CKC Registered Old English Sheepdogs Ontario">
+     <meta name="keywords" content="Purebred, CKC, Canadian Kennel Club, Puppy, Breeder, Ontario, Canada, Registered, Old English Sheepdog, Dogs, Top Breeder">
+  
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
      <link rel="stylesheet" href="bootstrap.min.css">
@@ -44,14 +41,14 @@ http://www.templatemo.com/tm-509-hydro
 <br>
 <br>
 
-               <!-- MENU LINKS -->
+          <!-- MENU LINKS -->
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-nav-first">
                          
-                         <li><a href="aboutus.html" class="smoothScroll">About Us</a></li>
-                         <li><a href="ourdogs.html" class="smoothScroll">Our Dogs</a></li>
+                         <li><a href="About-Us-Top-Dog-Breeder-Ontario-Canada.html" class="smoothScroll">About Us</a></li>
+                         <li><a href="Purebred-Old-English-Sheepdogs.html" class="smoothScroll">Our Dogs</a></li>
                          <li><a href="family.html" class="smoothScroll">Family</a></li>
-                         <li><a href="contact.html" class="smoothScroll">Contact</a></li>
+                         <li><a href="contact-registered-breeder.html" class="smoothScroll">Contact</a></li>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
@@ -94,7 +91,7 @@ http://www.templatemo.com/tm-509-hydro
 
                     <div class="col-md-12 col-sm-12">
                          <div class="section-title">
-                              
+                              <h1>Ontario Registered CKC Old English Sheepdog Breeder</h1>
                               <span class="line-bar">...</span>
                          </div>
                     </div>
