Update and rename aboutus.html to About-Us-Top-Dog-Breeder-Ontario-Canada.html

--- a/About-Us-Top-Dog-Breeder-Ontario-Canada.html
+++ b/About-Us-Top-Dog-Breeder-Ontario-Canada.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
 
-     <title>About Tasia Hills - CKC Accountable Breeder</title>
+    <title>About Tasia Hills - Top Dog Breeder in Ontario Canada</title>
 
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-     <meta name="description" content="">
-     <meta name="keywords" content="">
-     <meta name="author" content="">
+     <meta name="description" content="Breeder of Top Quality CKC Registered Old English Sheepdogs Ontario">
+     <meta name="keywords" content="Purebred, CKC, Canadian Kennel Club, Puppy, Breeder, Ontario, Canada, Registered, Old English Sheepdog, Dogs, Top Breeder">
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
      <link rel="stylesheet" href="bootstrap.min.css">
@@ -41,15 +40,16 @@
              </div>
 <br>
 <br>
-             <!-- MENU LINKS -->
+           <!-- MENU LINKS -->
              <div class="collapse navbar-collapse">
                   <ul class="nav navbar-nav navbar-nav-first">
                     <li><a href="aboutus.html" class="smoothScroll"></a></li>
-                       <li><a href="aboutus.html" class="smoothScroll">About Us</a></li>
-                       <li><a href="ourdogs.html" class="smoothScroll">Our Dogs</a></li>
+                       <li><a href="About-Tasia-Hills-Top-Dog-Breeder-Ontario-Canada.html" class="smoothScroll">About Us</a></li>
+                       <li><a href="Purebred-Old-English-Sheepdogs.html" class="smoothScroll">Our Dogs</a></li>
                        <li><a href="family.html" class="smoothScroll">Family</a></li>
-                       <li><a href="contact.html" class="smoothScroll">Contact</a></li>
+                       <li><a href="contact-registered-breeder.html" class="smoothScroll">Contact</a></li>
                   </ul>
+
 
                   <ul class="nav navbar-nav navbar-right">
                        <li><a href="https://www.facebook.com/groups/235613274912647/?ref=share&mibextid=wwXIfr&rdid=qXEChNavhgXhuqDR&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2Fg%2F1BiQx1GUHG%2F%3Fmibextid%3DwwXIfr#"><i class="fa fa-facebook-square"></i></a></li>
@@ -97,7 +97,7 @@
      </div>
      
      <div class="w3-col l6 w3-padding-large">
-       <img src="IMG_2588.JPG" class="w3-round w3-image " alt="Menu" style="width:100%">
+       <img src="IMG_2588.JPG" class="w3-round w3-image " alt="Registered Breeder" style="width:100%">
      </div>
    </div>
  </div>
@@ -155,7 +155,7 @@
                   <div class="col-md-4 col-sm-4">
                        <div class="google-map">
 
-   <img src="IMG_2594.JPG" class="img-responsive" alt="">
+   <img src="IMG_2594.JPG" class="img-responsive" alt="CKC Registered Breeder">
                        </div>
                   </div>
 
