--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-      <title>Tasia Tasia-Hills-CKC-Accountable-Breeder</title>
+      <title>Tasia-Hills-CKC-Accountable-Breeder</title>
 
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
