--- a/family.html
+++ b/family.html
@@ -3,15 +3,11 @@
 <head>
 
      <title>Family Gallery</title>
-<!-- 
-Hydro Template 
-http://www.templatemo.com/tm-509-hydro
--->
+
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-     <meta name="description" content="">
-     <meta name="keywords" content="">
-     <meta name="author" content="">
+     <meta name="description" content="Breeder of Top Quality CKC Registered Old English Sheepdogs Ontario">
+     <meta name="keywords" content="Purebred, CKC, Canadian Kennel Club, Puppy, Breeder, Ontario, Canada, Registered, Old English Sheepdog, Dogs, Top Breeder">
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
      <link rel="stylesheet" href="bootstrap.min.css">
@@ -48,13 +44,13 @@ http://www.templatemo.com/tm-509-hydro
 <br>
              <!-- MENU LINKS -->
              <div class="collapse navbar-collapse">
-                  <ul class="nav navbar-nav navbar-nav-first">
-                    <li><a href="aboutus.html" class="smoothScroll"></a></li>
-                       <li><a href="aboutus.html" class="smoothScroll">About Us</a></li>
-                       <li><a href="ourdogs.html" class="smoothScroll">Our Dogs</a></li>
-                       <li><a href="family.html" class="smoothScroll">Family</a></li>
-                       <li><a href="contact.html" class="smoothScroll">Contact</a></li>
-                  </ul>
+               <ul class="nav navbar-nav navbar-nav-first">
+                 <li><a href="About-Us-Top-Dog-Breeder-Ontario-Canada.html" class="smoothScroll"></a></li>
+                    <li><a href="About-Tasia-Hills-Top-Dog-Breeder-Ontario-Canada.html" class="smoothScroll">About Us</a></li>
+                    <li><a href="Purebred-Old-English-Sheepdogs.html" class="smoothScroll">Our Dogs</a></li>
+                    <li><a href="family.html" class="smoothScroll">Family</a></li>
+                    <li><a href="contact-registered-breeder.html" class="smoothScroll">Contact</a></li>
+               </ul>
 
                   <ul class="nav navbar-nav navbar-right">
                        <li><a href="https://www.facebook.com/groups/235613274912647/?ref=share&mibextid=wwXIfr&rdid=qXEChNavhgXhuqDR&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2Fg%2F1BiQx1GUHG%2F%3Fmibextid%3DwwXIfr#"><i class="fa fa-facebook-square"></i></a></li>
