--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                    <h3>A Trusted Dog Breeder</h3>
                                    <p>Our dogs aren't just pets—they're family. Nestled just 45 minutes northeast of Toronto, we pride ourselves on being more than just a dog breeder. Being one of the top breeders in Canada, we are a dedicated community of dog lovers passionate about our beloved Old English Sheepdogs.</p>
                                    
-                                   <a href="aboutus.html" class="btn section-btn">More About Us</a>
+                                  <a href="About-Us-Top-Dog-Breeder-Ontario-Canada.html" class="btn section-btn">More About Us</a>
                               </div>
                          </div>
                     </div>
@@ -122,7 +122,7 @@
                                    
                                    <h3>Meet Our Dogs</h3>
                                    <p>Visitors are always welcome to meet our dogs and experience firsthand what makes Tasia Hills Kennels Reg. so special. Our dogs are not just pedigrees; they're cherished members of our family, raised with love and care. Explore what we have in our kennel now.</p>
-                                   <a href="ourdogs.html" class="btn section-btn">Find Out More</a>
+                                    <a href="Purebred-Old-English-Sheepdogs.html" class="btn section-btn">Find Out More</a>
                               </div>
                          </div>
                     </div>
