--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                          <!-- BLOG THUMB -->
                          <div class="media blog-thumb">
                               <div class="media-object media-left">
-                                   <img src="IMG_2580.JPG" class="img-responsive" alt="CKC">
+                                   <img src="IMG_2580.JPG" style="top: -10px;" class="img-responsive" alt="CKC">
                               </div>
                               <div class="media-body blog-info">
                                    
