--- a/contact-registered-breeder.html
+++ b/contact-registered-breeder.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<00!DOCTYPE html>
 <html lang="en">
 <head>
 
@@ -46,8 +46,8 @@
            <!-- MENU LINKS -->
              <div class="collapse navbar-collapse">
                   <ul class="nav navbar-nav navbar-nav-first">
-                    <li><a href="aboutus.html" class="smoothScroll"></a></li>
-                       <li><a href="About-Tasia-Hills-Top-Dog-Breeder-Ontario-Canada.html" class="smoothScroll">About Us</a></li>
+                    <li><a href="About-Us-Top-Dog-Breeder-Ontario-Canada.html" class="smoothScroll"></a></li>
+                       <li><a href="About-Us-Top-Dog-Breeder-Ontario-Canada.html" class="smoothScroll">About Us</a></li>
                        <li><a href="Purebred-Old-English-Sheepdogs.html" class="smoothScroll">Our Dogs</a></li>
                        <li><a href="family.html" class="smoothScroll">Family</a></li>
                        <li><a href="contact-registered-breeder.html" class="smoothScroll">Contact</a></li>
