--- a/family.html
+++ b/family.html
@@ -46,7 +46,7 @@
              <div class="collapse navbar-collapse">
                <ul class="nav navbar-nav navbar-nav-first">
                  <li><a href="About-Us-Top-Dog-Breeder-Ontario-Canada.html" class="smoothScroll"></a></li>
-                    <li><a href="About-Tasia-Hills-Top-Dog-Breeder-Ontario-Canada.html" class="smoothScroll">About Us</a></li>
+                    <li><a href="About-Us-Top-Dog-Breeder-Ontario-Canada" class="smoothScroll">About Us</a></li>
                     <li><a href="Purebred-Old-English-Sheepdogs.html" class="smoothScroll">Our Dogs</a></li>
                     <li><a href="family.html" class="smoothScroll">Family</a></li>
                     <li><a href="contact-registered-breeder.html" class="smoothScroll">Contact</a></li>
