--- a/About-Us-Top-Dog-Breeder-Ontario-Canada.html
+++ b/About-Us-Top-Dog-Breeder-Ontario-Canada.html
@@ -17,6 +17,7 @@
      <!-- MAIN CSS -->
      <link rel="stylesheet" href="templatemo-style.css">
      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+     <link rel="stylesheet" href="w3.css">
 </head>
 <body>
 
