--- a/contact-registered-breeder.html
+++ b/contact-registered-breeder.html
@@ -1,4 +1,4 @@
-<00!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 
@@ -38,7 +38,7 @@
   
                     <!-- lOGO TEXT HERE -->
                     <a class="navbar-brand" href="index.html">
-                         <img src="tasiahillsmain.jpg" alt="CKC Registered Breeder" style="width:200px; height:120px">
+                         <img src="tasiahillsmain.jpg" alt="CKC Registered Breeder" style="width:200px; height:110px">
                      </a>
                </div>
   <br>
