--- a/family.html
+++ b/family.html
@@ -4,6 +4,23 @@
 
      <title>Family Gallery</title>
 
+
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://tasiahillsoes.com">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Tasia-Hills-CKC-Accountable-Breeder">
+<meta property="og:description" content="Breeder of Top Quality CKC Registered Old English Sheepdogs Ontario">
+<meta property="og:image" content="https://opengraph.b-cdn.net/production/images/7245be59-d61d-44b2-b7df-492aa1f27acc.jpg?token=z8WA5RMdwbxaVvgWylSxfk66q6Ln9WAFtL37WnWuOQ8&height=814&width=1170&expires=33283151340">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="tasiahillsoes.com">
+<meta property="twitter:url" content="https://tasiahillsoes.com">
+<meta name="twitter:title" content="Tasia-Hills-CKC-Accountable-Breeder">
+<meta name="twitter:description" content="Breeder of Top Quality CKC Registered Old English Sheepdogs Ontario">
+<meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/7245be59-d61d-44b2-b7df-492aa1f27acc.jpg?token=z8WA5RMdwbxaVvgWylSxfk66q6Ln9WAFtL37WnWuOQ8&height=814&width=1170&expires=33283151340">
+
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
      <meta name="description" content="Breeder of Top Quality CKC Registered Old English Sheepdogs Ontario">
